--- a/devinmajordotcom/Views/Home/Index.cshtml
+++ b/devinmajordotcom/Views/Home/Index.cshtml
@@ -15,15 +15,10 @@
         </div>
     </div>
     <div class="col-md-4 col-sm-4">
-        <div class="work-wrapper">
-            <i class="glyphicon glyphicon-film" style="font-size: 50px;"></i>
-            <h3 class="text-uppercase tm-work-h3">Plex Media Dashboard</h3>
-            <hr>
-            <p>Movies, TV, Music, Photos and More! Click here to be entertained.</p>
-        </div>
+        @Html.Raw(Html.ActionLink("REPLACE", "Index", "Portfolio", null, new { @class = "" }).ToHtmlString().Replace("REPLACE", PartialHelper.RenderViewToString(this.ViewContext, "_MainApplicationLinkContent", null)))
     </div>
     <div class="col-md-4 col-sm-4">
-        @Html.Raw(Html.ActionLink("REPLACE", "Index", "Portfolio", null, new { @class="" }).ToHtmlString().Replace("REPLACE",PartialHelper.RenderViewToString(this.ViewContext, "_MainApplicationLinkContent", null)))
+        @Html.Raw(Html.ActionLink("REPLACE", "Index", "MediaDashboard", null, new { @class = "" }).ToHtmlString().Replace("REPLACE",PartialHelper.RenderViewToString(this.ViewContext, "_MainApplicationLinkContent", null)))
     </div>
 
 </div>
