--- a/devinmajordotcom/Content/cover2.css
+++ b/devinmajordotcom/Content/cover2.css
@@ -3,7 +3,7 @@
  */
 
 .menu {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   height: 100%;
@@ -206,13 +206,13 @@ body {
 
 /* Extra markup and styles for table-esque vertical and horizontal centering */
 .site-wrapper {
-      display: table;
-    width: 96%;
-    height: 100%;
-    min-height: 100%;
+    display: table;
+    width: 100%;
+    height: 99.75%;
+    min-height: 99.75%;
     position: relative;
     z-index: 1;
-    left: 4%;
+    left: 74.67px;
 }
 
 body {
