--- a/devinmajordotcom/Views/MediaDashboard/Index.cshtml
+++ b/devinmajordotcom/Views/MediaDashboard/Index.cshtml
@@ -15,7 +15,7 @@
 
 <body>
 
-    <ul class="menu">
+    <ul class="menu toggled" id="menu" >
         <li title="home"><a href="#" class="active home">home</a></li>
         <li title="search"><a href="#" class="search">search</a></li>
         <li title="pencil"><a href="#" class="pencil">pencil</a></li>
@@ -26,7 +26,7 @@
 
     <div class="site-wrapper">
 
-        <iframe style="width:100%;height:100%;" src="http://70.76.54.169:32400"></iframe>
+        <iframe style="width:100%;height:100%;position:relative;z-index:-1; border:none;" src="http://70.76.54.169:32400"></iframe>
         @*<iframe src="http://70.76.54.169:3579"></iframe>
         <iframe src="http://70.76.54.169:5050"></iframe>
         <iframe src="http://70.76.54.169:8989"></iframe>
