--- a/devinmajordotcom/Content/cover2.css
+++ b/devinmajordotcom/Content/cover2.css
@@ -2,6 +2,40 @@
  * Globals
  */
 
+#nav1 {
+    position: absolute;
+    width: 60px;
+    height: 100%;
+    z-index: 1001;
+}
+#nav{
+    position:absolute;
+    top:0;
+    left:0;
+    width:0px;
+    height:100%;
+    z-index:100;
+    background:#111;
+    color:#fff;
+    overflow:hidden;
+    z-index: 1002;
+}
+/*#nav ul{
+    margin:0;
+    padding:0;
+    width:200px;
+    margin:10px;
+    list-style:none;
+}
+#nav a span{
+    margin:0 10px 0 0;
+}
+#nav a{
+    color:#fff;
+    font-size:14px;
+    text-decoration:none;
+}*/
+
 .menu {
   position: absolute;
   top: 0;
@@ -76,7 +110,7 @@ box-shadow: inset -10px 0px 15px 3px rgba(0,0,0,0.5);
     border:2.5em solid transparent;
     border-left-color:black;
     border-width: 2.5em 1em;
-    z-index:1000;
+    z-index:1003;
 }
 .menu li{
     position:relative;
@@ -99,7 +133,7 @@ box-shadow: inset -10px 0px 15px 3px rgba(0,0,0,0.5);
     -webkit-box-shadow: inset -10px 0px 35px 3px rgba(0,0,0,0.5);
 -moz-box-shadow: inset -10px 0px 35px 3px rgba(0,0,0,0.5);
 box-shadow: inset -10px 0px 35px 3px rgba(0,0,0,0.5);
-z-index:1000;
+z-index:1003;
 }
 .menu li:hover:after{
     visibility:visible;
@@ -111,7 +145,9 @@ z-index:1000;
   }
 }
 
-
+.hiddenSidebar {
+    left:0px !important;
+}
 
 
 .blueGlyphicon {
@@ -212,7 +248,11 @@ body {
     min-height: 99.75%;
     position: relative;
     z-index: 1;
-    left: 74.67px;
+    left: 0px;
+}
+
+.site-wrapper-collapsed {
+    left: 74.67px !important;
 }
 
 body {
