--- a/devinmajordotcom/Content/cover2.css
+++ b/devinmajordotcom/Content/cover2.css
@@ -15,7 +15,7 @@
     width:0px;
     height:100%;
     z-index:100;
-    background:#111;
+    background:transparent;
     color:#fff;
     overflow:hidden;
     z-index: 1002;
