--- a/devinmajordotcom/Views/MediaDashboard/Index.cshtml
+++ b/devinmajordotcom/Views/MediaDashboard/Index.cshtml
@@ -17,40 +17,25 @@
 
     <div id="nav">
         <ul class="menu toggled nav" id="menu">
-            
-            <li title="home"><span class="sidebarItem"><a href="#" class="active home">home</a></span></li>
-            <li title="search"><span class="sidebarItem"><a href="#" class="search">search</a></span></li>
-            <li title="pencil"><span class="sidebarItem"><a href="#" class="pencil">pencil</a></span></li>
-            <li title="about"><span class="sidebarItem"><a href="#" class="about">about</a></span></li>
-            <li title="archive"><span class="sidebarItem"><a href="#" class="archive">archive</a></span></li>
-            <li title="contact"><span class="sidebarItem"><a href="#" class="contact">contact</a></span></li>
-
+            <li title="home"><span class="sidebarItem"><a data-framename="Plex" href="#" class="active home">Plex</a></span></li>
+            <li title="search"><span class="sidebarItem"><a data-framename="Requests" href="#" class="search">Requests</a></span></li>
+            <li title="pencil"><span class="sidebarItem"><a data-framename="CouchPotato" href="#" class="pencil">CouchPotato</a></span></li>
+            <li title="about"><span class="sidebarItem"><a data-framename="Sonarr" href="#" class="about">Sonarr</a></span></li>
+            <li title="archive"><span class="sidebarItem"><a data-framename="Headphones" href="#" class="archive">Headphones</a></span></li>
+            <li title="contact"><span class="sidebarItem"><a data-framename="Deluge" href="#" class="contact">Deluge</a></span></li>
         </ul>
     </div>
+
     <div id="nav1"></div>
 
-    @*<ul class="menu toggled" id="menu" >
-        <li title="home"><span class="sidebarItem"><a href="#" class="active home">home</a></span></li>
-        <li title="search"><span class="sidebarItem"><a href="#" class="search">search</a></span></li>
-        <li title="pencil"><span class="sidebarItem"><a href="#" class="pencil">pencil</a></span></li>
-        <li title="about"><span class="sidebarItem"><a href="#" class="about">about</a></span></li>
-        <li title="archive"><span class="sidebarItem"><a href="#" class="archive">archive</a></span></li>
-        <li title="contact"><span class="sidebarItem"><a href="#" class="contact">contact</a></span></li>
-    </ul>*@
-
     <div id="site-wrapper" class="site-wrapper">
-
-        <iframe style="width:100%;height:100%;position:relative;z-index:-1; border:none;" src="http://70.76.54.169:32400"></iframe>
-        @*<iframe src="http://70.76.54.169:3579"></iframe>
-        <iframe src="http://70.76.54.169:5050"></iframe>
-        <iframe src="http://70.76.54.169:8989"></iframe>
-        <iframe src="http://70.76.54.169:7171/home"></iframe>
-        <iframe src="http://70.76.54.169:8112"></iframe>*@
-
+        @*<iframe id="Plex" style="width:100%;height:99.5vh;position:relative;z-index:-1; border:none; display: none;" src="http://70.76.54.169:32400"></iframe>
+    <iframe id="Requests" style="width:100%;height:99.5vh;position:relative;z-index:-1; border:none; display: none;" src="http://70.76.54.169:3579"></iframe>
+    <iframe id="CouchPotato" style="width:100%;height:99.5vh;position:relative;z-index:-1; border:none; display: none;" src="http://70.76.54.169:5050"></iframe>
+    <iframe id="Sonarr" style="width:100%;height:99.5vh;position:relative;z-index:-1; border:none; display: none;" src="http://70.76.54.169:8989"></iframe>
+    <iframe id="Headphones" style="width:100%;height:99.5vh;position:relative;z-index:-1; border:none; display: none;" src="http://70.76.54.169:7171/home"></iframe>*@
+    <iframe id="Deluge" style="width:100%;height:99.5vh;position:relative;z-index:-1; border:none;" src="http://70.76.54.169:8112"></iframe>
     </div>
-
-
-
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/jqueryval")
