--- a/devinmajordotcom/Content/cover2.css
+++ b/devinmajordotcom/Content/cover2.css
@@ -42,25 +42,24 @@
 */
 
 .menu {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
     background: -moz-linear-gradient(left, rgba(30,87,153,0) 0%, rgba(30,87,153,0.8) 15%, rgba(30,87,153,1) 19%, rgba(30,87,153,1) 20%, rgba(41,137,216,1) 50%, rgba(30,87,153,1) 80%, rgba(30,87,153,1) 81%, rgba(30,87,153,0.8) 85%, rgba(30,87,153,0) 100%); /* FF3.6-15 */
     background: -webkit-linear-gradient(left, rgba(30,87,153,0) 0%,rgba(30,87,153,0.8) 15%,rgba(30,87,153,1) 19%,rgba(30,87,153,1) 20%,rgba(41,137,216,1) 50%,rgba(30,87,153,1) 80%,rgba(30,87,153,1) 81%,rgba(30,87,153,0.8) 85%,rgba(30,87,153,0) 100%); /* Chrome10-25,Safari5.1-6 */
     background: linear-gradient(to right, rgba(30,87,153,0) 0%,rgba(30,87,153,0.8) 15%,rgba(30,87,153,1) 19%,rgba(30,87,153,1) 20%,rgba(41,137,216,1) 50%,rgba(30,87,153,1) 80%,rgba(30,87,153,1) 81%,rgba(30,87,153,0.8) 85%,rgba(30,87,153,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#001e5799', endColorstr='#001e5799',GradientType=1 ); /* IE6-9 */
-  /*background: transparent;
-  -webkit-box-shadow: inset -10px 0px 15px 3px rgba(0,0,0,0.5);
--moz-box-shadow: inset -10px 0px 15px 3px rgba(0,0,0,0.5);
-box-shadow: inset -10px 0px 15px 3px rgba(0,0,0,0.5);*/
+    -webkit-box-shadow: inset -10px 0px 15px 3px rgba(0,0,0,0.7);
+    -moz-box-shadow: inset -10px 0px 15px 3px rgba(0,0,0,0.7);
+    box-shadow: inset -10px 0px 15px 3px rgba(0,0,0,0.7);
 }
 .menu li a{
     display:block;
-    height:em;
+    height:5em;
     width:5em;
     text-indent:-500em;
     line-height:5em;
@@ -123,7 +122,17 @@ box-shadow: inset -10px 0px 15px 3px rgba(0,0,0,0.5);*/
     border:2.5em solid transparent;
     border-left-color:black;
     border-width: 2.5em 1em;
-    z-index:1003;
+    z-index:1006;
+}
+.menu li a:hover:after{
+    position:absolute;
+    left:5em;
+    top:0;
+    content:"";
+    border:2.5em solid transparent;
+    border-left-color:black;
+    border-width: 2.5em 1em;
+    z-index:1006;
 }
 .menu li{
     position:relative;
@@ -137,16 +146,20 @@ box-shadow: inset -10px 0px 15px 3px rgba(0,0,0,0.5);*/
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    text-transform:uppercase;
-    background:transparent;
+    background: #1e5799; /* Old browsers */
+    background: -moz-linear-gradient(top, #1e5799 0%, #2989d8 50%, #207cca 51%, #7db9e8 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, #1e5799 0%,#2989d8 50%,#207cca 51%,#7db9e8 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, #1e5799 0%,#2989d8 50%,#207cca 51%,#7db9e8 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1e5799', endColorstr='#7db9e8',GradientType=0 ); /* IE6-9 */
+    border-radius: 5px;
     padding:2em;
     transition: all 0.3s ease-in-out;
     visibility:hidden;
     opacity:0;
-    -webkit-box-shadow: inset -10px 0px 35px 3px rgba(0,0,0,0.5);
--moz-box-shadow: inset -10px 0px 35px 3px rgba(0,0,0,0.5);
-box-shadow: inset -10px 0px 35px 3px rgba(0,0,0,0.5);
-z-index:1003;
+    -webkit-box-shadow: inset 10px 0px 35px 3px rgba(0,0,0,0.5);
+    -moz-box-shadow: inset 10px 0px 35px 3px rgba(0,0,0,0.5);
+    box-shadow: inset 10px 0px 35px 3px rgba(0,0,0,0.5);
+    z-index:1004;
 }
 .menu li:hover:after{
     visibility:visible;
