--- a/devinmajordotcom/Views/Shared/_Layout.cshtml
+++ b/devinmajordotcom/Views/Shared/_Layout.cshtml
@@ -18,13 +18,14 @@
 
             <div class="cover-container">
 
-                <div class="masthead clearfix">
+                <div class="masthead clearfix" style="background-color: #192425; z-index: 2000;height: 80px;">
                     <div class="inner">
                         <h3 class="masthead-brand">@ViewBag.Title</h3>
                         <ul class="nav masthead-nav">
-                            <li class="active" data-activediv="#home"><a href="#home">Home & Apps</a></li>
-                            <li data-activediv="#server"><a href="#server">Server Status</a></li>
-                            <li data-activediv="#contact"><a href="#contact">Contact Me</a></li>
+                            <li class="active" data-activediv="#home"><a>Home & Apps</a></li>
+                            <li data-activediv="#server"><a>Server Status</a></li>
+                            <li data-activediv="#contact"><a>Contact Me</a></li>
+                            <li data-activediv="#appmanager"><a>App Manager</a></li>
                         </ul>
                     </div>
                 </div>
