Everything so far is now database driven, media dashboard and portfolio have CRUD forms started

--- a/devinmajordotcom/Content/cover2.css
+++ b/devinmajordotcom/Content/cover2.css
@@ -2,6 +2,16 @@
  * Globals
  */
 
+
+.absolute-center {
+  margin: auto;
+  position: absolute;
+  top: 40vh; 
+  left: 0; 
+  bottom: 0; 
+  right: 0;
+}
+
 #nav1 {
     position: absolute;
     width: 60px;
