--- a/devinmajordotcom/Views/Shared/_Layout.cshtml
+++ b/devinmajordotcom/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
 
             <div class="cover-container">
 
-                <div class="masthead clearfix" style="background-color: #192425; z-index: 2000;height: 80px;">
+                <div class="masthead clearfix" style="background-color:#0B1C1E; z-index: 2000;min-height: 85px; padding:2px;">
                     <div class="inner">
                         <h3 class="masthead-brand">@ViewBag.Title</h3>
                         <ul class="nav masthead-nav">
@@ -44,6 +44,8 @@
         </div>
 
     </div>
+
+    <div id="bootsnackAlertContainer" class="bootsnack"></div>
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/jqueryval")
