--- a/devinmajordotcom/Content/cover.css
+++ b/devinmajordotcom/Content/cover.css
@@ -27,7 +27,7 @@
 }
 .form-control {
   background: transparent;
-  border: 1px solid #71cef5;
+  border: 1px solid white;
   -webkit-box-shadow: none;
           box-shadow: none;
   margin-bottom: 10px;
@@ -77,6 +77,7 @@ a:hover {
   border: 1px solid #666;
   border-radius: 2px;
   text-align: center;
+  background-color:#0B1C1E;
   padding: 20px 20px 20px 20px;
   -webkit-transition: all 0.6s ease-in;
           transition: all 0.6s ease-in;
@@ -96,13 +97,13 @@ a:hover {
 html,
 body {
   height: 100%;
-  background-color: #333;
+  
+  background-color:#0B1C1E;
 }
 body {
   color: #fff;
   text-align: center;
   text-shadow: 0 1px 3px rgba(0,0,0,.5);
-  box-shadow: inset 0 0 100px rgba(0,0,0,.5);
 }
 
 /* Extra markup and styles for table-esque vertical and horizontal centering */
@@ -116,20 +117,14 @@ body {
 }
 
 .site-wrapper:before {
-    background-image: url('Images/back2.png');
-    background-repeat: no-repeat;
-    -ms-background-size: cover;
-    -o-background-size: cover;
-    -moz-background-size: cover;
-    -webkit-background-size: cover;
-    background-size: cover;
+    background-image: url('Images/back3.png');
+
     z-index: -1;
     content: '';
     position: absolute;
-    opacity: 0.65;
-    width: 100%;
-  height: 100%; /* For at least Firefox */
-  min-height: 100%;
+    width: 50%;
+    height: 50%; /* For at least Firefox */
+    min-height: 50%;
 }
 
 .site-wrapper-inner {
@@ -140,6 +135,8 @@ body {
 .cover-container {
   margin-right: auto;
   margin-left: auto;
+  
+  background-color:#0B1C1E;
 }
 
 /* Padding for spacing */
@@ -244,10 +241,23 @@ body {
   }
 }
 
-@media (min-width: 992px) {
+/*@media (min-width: 992px) {
   .masthead,
   .mastfoot,
   .cover-container {
     width: 80vw;
+  }
+}*/
+
+@media (min-width: 992px) {
+  .masthead,
+  .mastfoot,
+  .cover-container {
+    width: 700px;
+  }
+  .site-wrapper:before {
+    width: 100%;
+    height: 100%; /* For at least Firefox */
+    min-height: 100%;
   }
 }
