--- a/devinmajordotcom/Views/Home/_ApplicationManager.cshtml
+++ b/devinmajordotcom/Views/Home/_ApplicationManager.cshtml
@@ -1,51 +1,37 @@
-﻿<div style="display:none;" class="inner cover" id="appmanager">
+﻿@model devinmajordotcom.ViewModels.ApplicationManagementViewModel
+@{ 
 
+}
+<div style="display:none;" class="inner cover" id="appmanager">
     <h1 class="cover-heading">Application Manager</h1>
-    <p class="lead" style="color: #71cef5;">Manage settings for all existing apps.</p>
-    
-    <br/>
-    
-    <div class="row">
-        <div class="col-md-12">
-            <div class="appContainer work-wrapper" id="landingPage">
-                <h3>Landing Page</h3>
-                <hr>
-                <div class="settingsContainer">
-                    <label>Site Links</label><br />
+    <p class="lead" style="color: #71cef5;">Manage settings for all existing apps.</p>   
+    @if (Model.LandingPageApplicationLinks.Count > 0)
+    {
+        <br />
+        <div class="row">
+            <div class="col-md-12">
 
-                    <label>Site Links</label><br />
+                @foreach (var appDataModel in Model.LandingPageApplicationLinks)
+                {
 
-                    <label>Site Links</label><br />
+                    <div class="appContainer work-wrapper" id="@appDataModel.DisplayName">
+                        <h3>@appDataModel.DisplayName</h3>
+                        <hr>
+                        <div class="settingsContainer">
+                            @if (appDataModel.DisplayName == "Plex Media Dashboard")
+                            {
+                                @Html.Partial("../MediaDashboard/_ManageMediaDashboard", Model.CurrentMediaDashboardData)
+                            }
+                            @if (appDataModel.DisplayName == "Professional Portfolio")
+                            {
+                                @Html.Partial("../Portfolio/_ManagePortfolio", Model.CurrentPortfolioData)
+                            }
+                        </div>
+                    </div>
 
-                    <label>Site Links</label><br />
+                }
 
-                    <label>Site Links</label><br />
-
-                    <label>Site Links</label><br />
-                </div>
-            </div>
-            <div class="appContainer work-wrapper" id="myHome">
-                <h3>My Custom Homepage</h3>
-                <hr>
-                <div class="settingsContainer">
-                    <label>Site Links</label>
-                </div>
-            </div>
-            <div class="appContainer work-wrapper" id="mediaDashboard">
-                <h3>Plex Media Dashboard</h3>
-                <hr>
-                <div class="settingsContainer">
-                    <label>Site Links</label>
-                </div>
-            </div>
-            <div class="appContainer work-wrapper" id="landingPage">
-                <h3>My Professional Portfolio</h3>
-                <hr>
-                <div class="settingsContainer">
-                    <label>Site Links</label>
-                </div>
             </div>
         </div>
-    </div>
-
+    }
 </div>
