--- a/devinmajordotcom/Views/MediaDashboard/Index.cshtml
+++ b/devinmajordotcom/Views/MediaDashboard/Index.cshtml
@@ -1,55 +1,69 @@
 ﻿@using devinmajordotcom.Helpers;
+@model devinmajordotcom.ViewModels.MediaDashboardViewModel
 @{
     Layout = "../Shared/_MediaLayout.cshtml";
 }
 
 <div id="nav">
     <ul class="menu toggled nav" id="menu">
-        <li title="Plex">
-            <span class="sidebarItem"><a data-framename="Plex" href="#" class="active home">Plex</a></span>
-        </li>
-        <li title="Requests">
-            <span class="sidebarItem"><a data-framename="Requests" href="#" class="search">Requests</a></span>
-        </li>
-        <li title="CouchPotato">
-            <span class="sidebarItem"><a data-framename="CouchPotato" href="#" class="pencil">CouchPotato</a></span>
-        </li>
-        <li title="Sonarr">
-            <span class="sidebarItem"> <a data-framename="Sonarr" href="#" class="about">Sonarr</a></span>
-        </li>
-        <li title="Headphones">
-            <span class="sidebarItem"><a data-framename="Headphones" href="#" class="archive">Headphones</a></span>
-        </li>
-        <li title="Deluge">
-            <span class="sidebarItem"><a data-framename="Deluge" href="#" class="contact">Deluge</a></span>
-        </li>
+
+        @if (Model.SidebarLinks.Count > 0)
+        {
+            foreach (var sidebarLink in Model.SidebarLinks)
+            {
+
+                var cssClassNameList = "";
+
+                if(sidebarLink.IsDefault)
+                {
+                    cssClassNameList += "active ";
+                }
+
+                cssClassNameList += sidebarLink.DisplayIcon;
+
+                <li title="@sidebarLink.DisplayName">
+                    <span class="sidebarItem"><a data-framename="@sidebarLink.ID" href="#" class="@cssClassNameList">@sidebarLink.DisplayName</a></span>
+                </li>
+            }
+        }
+
     </ul>
 </div>
 
-<div id="nav1"></div>
+@if (Model.SidebarLinks.Count > 0)
+{ 
+    <div id="nav1"></div>
+}
+
 
 <div id="site-wrapper" class="site-wrapper">
 
-    <iframe src="http://70.76.54.169:32400/web/index.html"
-            style="width: 100%; height: 99.5vh; position: relative; z-index: -1; border: none;"
-            id="Plex"
-            scrolling="auto"
-            sandbox="allow-forms allow-same-origin allow-pointer-lock allow-scripts allow-popups allow-modals"
-            allowfullscreen="true"
-            webkitallowfullscreen="true"
-            class="z-iframe"
-            frameborder="0">
-    </iframe>
-
-    <iframe src="http://70.76.54.169:8112"
-            style="width: 100%; height: 99.5vh; position: relative; z-index: -1; border: none; display: none;"
-            id="Deluge"
-            scrolling="auto"
-            sandbox="allow-forms allow-same-origin allow-pointer-lock allow-scripts allow-popups allow-modals"
-            allowfullscreen="true"
-            webkitallowfullscreen="true"
-            class="z-iframe"
-            frameborder="0">
-    </iframe>
-
+    @if (Model.SidebarLinks.Count > 0)
+    {
+        foreach (var link in Model.SidebarLinks)
+        {
+            if (link.URL != null)
+            {
+                <iframe 
+                        src="@link.URL"
+                        style="width: 100%; height: 99.5vh; position: relative; z-index: -1; border: none; @if(!link.IsDefault) { <text>display:none;</text> }"
+                        id="@link.ID"
+                        scrolling="auto"
+                        sandbox="allow-forms allow-same-origin allow-pointer-lock allow-scripts allow-popups allow-modals"
+                        allowfullscreen="true"
+                        webkitallowfullscreen="true"
+                        class="z-iframe"
+                        frameborder="0">
+                </iframe>
+            }
+            else
+            {
+                //TODO: Add something here, preferably make use of Controller/Action variables
+            }
+        }
+    }
+    else
+    {
+        @Html.Partial("../Shared/Error", new HandleErrorInfo(new Exception(), "MediaDashboard", "Index"))
+    }
 </div>
