--- a/devinmajordotcom/Views/Portfolio/Index.cshtml
+++ b/devinmajordotcom/Views/Portfolio/Index.cshtml
@@ -3,206 +3,259 @@
     Layout = "../Shared/_PortfolioLayout.cshtml";
 }
 
-<!-- START HOME -->
-<section id="home" class="templatemo-home">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-2 col-sm-1"></div>
-            <div class="col-md-8 col-sm-10">
-                <h1 class="tm-home-title"><strong>@Model.SplashScreenDetails.FirstName @Model.SplashScreenDetails.LastName</strong></h1>
-                <h2 class="tm-home-subtitle">@Model.SplashScreenDetails.PositionTitle</h2>
-                <b><p>@Model.SplashScreenDetails.PersonalDescription</p></b>
-                <a href="#work" class="btn btn-default smoothScroll tm-view-more-btn">Let's Begin</a>
-            </div>
-            <div class="col-md-2 col-sm-1"></div>
-        </div>
-    </div>
-</section>
-<!-- END HOME -->
-
-<!-- START WORK -->
-<section id="work" class="tm-padding-top-bottom-100">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-offset-1 col-md-11">
-                <h2 class="title">My <strong>Work</strong></h2>
-            </div>
-            @{
-                var count = 0;
-                var extraDiv = "</div><br/><div class='row'>";
-                foreach (var workItem in Model.HighlightedWorkSkills)
-                {
-                    if (count % 3 == 0)
-                    {
-                        @Html.Raw(extraDiv)
-                    }
-                    <div class="col-md-4 col-sm-4">
-                        <div class="work-wrapper">
-                            <i class="@workItem.SkillIcon"></i>
-                            <h3 class="text-uppercase tm-work-h3">@workItem.SkillTitle</h3>
-                            <hr>
-                            <p>@Html.Raw(workItem.SkillDetails)</p>
-                        </div>
-                    </div>
-                    count = count + 1;
-                }
-            }
-        </div>
-    </div>
-</section>
-<!-- END WORK -->
-
-<!-- START PORTFOLIO -->
-<section id="portfolio" class="tm-portfolio">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12 wow bounce">
-                <div class="title">
-                    <h2 class="tm-portfolio-title">My Past & Current <strong>Projects</strong></h2>
+@if (@Model.SplashScreenDetails != null)
+{
+    <!-- START HOME -->
+    <section id="home" class="templatemo-home">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-2 col-sm-1"></div>
+                <div class="col-md-8 col-sm-10">
+                    <h1 class="tm-home-title"><strong>@Model.SplashScreenDetails.FirstName @Model.SplashScreenDetails.LastName</strong></h1>
+                    <h2 class="tm-home-subtitle">@Model.SplashScreenDetails.PositionTitle</h2>
+                    <b><p>@Model.SplashScreenDetails.PersonalDescription</p></b>
+                    <a href="#work" class="btn btn-default smoothScroll tm-view-more-btn">Let's Begin</a>
                 </div>
+                <div class="col-md-2 col-sm-1"></div>
+            </div>
+        </div>
+    </section>
+    <!-- END HOME -->
+}
 
-                <!-- START ISO SECTION -->
-                <div class="iso-section">
-
-                    <ul class="filter-wrapper clearfix">
-
-                        <li><a href="#" class="opc-main-bg selected" data-filter="*">All</a></li>
-
-                        @foreach (var filter in Model.AvailableProjectFilters)
+@if(Model.HighlightedWorkSkills.Count > 0)
+{
+    <!-- START WORK -->
+    <section id="work" class="tm-padding-top-bottom-100">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-offset-1 col-md-11">
+                    <h2 class="title">My <strong>Work</strong></h2>
+                </div>
+                @{
+                    var count = 0;
+                    var extraDiv = "</div><br/><div class='row'>";
+                    foreach (var workItem in Model.HighlightedWorkSkills)
+                    {
+                        if (count % 3 == 0)
                         {
-                            <li><a href="#" class="opc-main-bg" data-filter=".@filter.ID">@filter.Name</a></li>
+                            @Html.Raw(extraDiv)
                         }
+                        <div class="col-md-4 col-sm-4">
+                            <div class="work-wrapper">
+                                <i class="@workItem.SkillIcon"></i>
+                                <h3 class="text-uppercase tm-work-h3">@workItem.SkillTitle</h3>
+                                <hr>
+                                <p>@Html.Raw(workItem.SkillDetails)</p>
+                            </div>
+                        </div>
+                        count = count + 1;
+                    }
+                }
+            </div>
+        </div>
+    </section>
+    <!-- END WORK -->
+}
 
-                    </ul>
+@if (Model.PortfolioProjects.Count > 0)
+{
+    <!-- START PORTFOLIO -->
+    <section id="portfolio" class="tm-portfolio">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 wow bounce">
+                    <div class="title">
+                        <h2 class="tm-portfolio-title">My Past & Current <strong>Projects</strong></h2>
+                    </div>
 
-                    <div class="iso-box-section">
-                        <div class="iso-box-wrapper col4-iso-box">
+                    <!-- START ISO SECTION -->
+                    <div class="iso-section">
 
-                            @foreach (var project in Model.PortfolioProjects)
+                        <ul class="filter-wrapper clearfix">
+
+                            <li><a href="#" class="opc-main-bg selected" data-filter="*">All</a></li>
+
+                            @foreach (var filter in Model.AvailableProjectFilters)
                             {
-                                <div class="iso-box @foreach (var filter in project.ProjectFilters) { <text>@filter.ID</text> } col-md-3 col-sm-3 col-xs-12">
-                                    <div class="portfolio-thumb">
-                                        <img src="@String.Format("data:image/jpg;base64,{0}", Convert.ToBase64String(project.EncodedImage))" class="fluid-img" alt="portfolio img">
-                                        <div class="portfolio-overlay">
-                                            <h3 class="portfolio-item-title">@project.ProjectName</h3>
-                                            <p>@project.ProjectDescription</p>
-                                        </div>
-                                    </div>
-                                </div>
+                                <li><a href="#" class="opc-main-bg" data-filter=".@filter.ID">@filter.Name</a></li>
                             }
 
+                        </ul>
+
+                        <div class="iso-box-section">
+                            <div class="iso-box-wrapper col4-iso-box">
+
+                                @foreach (var project in Model.PortfolioProjects)
+                                {
+                                    <div class="iso-box @foreach (var filter in project.ProjectFilters) { <text>@filter.ID</text> } col-md-3 col-sm-3 col-xs-12">
+                                        <div class="portfolio-thumb">
+                                            <img src="@String.Format("data:image/jpg;base64,{0}", Convert.ToBase64String(project.EncodedImage))" class="fluid-img" alt="portfolio img">
+                                            <div class="portfolio-overlay">
+                                                <h3 class="portfolio-item-title">@project.ProjectName</h3>
+                                                <p>@project.ProjectDescription</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                }
+
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- END PORTFOLIO -->
+
+}
+
+@if (Model.ProfileDetails != null)
+{
+    <!-- START RESUME -->
+    <section id="resume" class="tm-padding-top-bottom-100">
+        <div class="container">
+            <div class="row">
+
+                <div class="col-md-6 col-sm-6">
+
+                    <h2 class="title">My <strong>Profile</strong></h2>
+                    <p><span class="tm-info-label">Name...</span>@Model.ProfileDetails.FirstName @Model.ProfileDetails.LastName</p>
+                    <p><span class="tm-info-label">Birthday...</span>@Model.ProfileDetails.DateOfBirth</p>
+                    <p><span class="tm-info-label">Address...</span>@Model.ProfileDetails.Address</p>
+                    <p><span class="tm-info-label">Phone...</span>@Model.ProfileDetails.PhoneNumber</p>
+                    <p><span class="tm-info-label">Email...</span>@Model.ProfileDetails.Email</p>
+                    <p><span class="tm-info-label">Website...</span> <a href="@Model.ProfileDetails.WebsiteURL" class="tm-red-text smoothScroll">@Model.ProfileDetails.WebsiteText</a></p>
+                    <br />
+
+                    @if (Model.LanguageSkills.Count > 0)
+                    {
+                        <h2 class="title">Language <strong>Skills</strong></h2>
+
+                        foreach (var languageSkill in Model.LanguageSkills)
+                        {
+                            <h4 class="tm-progress-label">
+                                @if (languageSkill.LanguageName != null)
+                                {
+                                    @languageSkill.LanguageName <text>(@languageSkill.LanguageSpecifics)</text>
+                                }
+                                else
+                                {
+                                    @languageSkill.LanguageSpecifics
+                                }
+                                <small class="progress-percent-small">@languageSkill.LanguageCapabilityPercentage%</small>
+                            </h4>
+                            <div class="progress tm-progress">
+                                <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="@languageSkill.LanguageCapabilityPercentage" aria-valuemin="0" aria-valuemax="100" style="width: @languageSkill.LanguageCapabilityPercentage%;"></div>
+                            </div>
+                        }
+                    }
+
+                </div>
+
+                <div class="col-md-6 col-sm-6">
+
+                    @if (Model.TechSkills.Count > 0)
+                    {
+                        <h2 class="title"><strong>Tech</strong> Skills</h2>
+
+                        <ul>
+
+                            @foreach (var techSkill in Model.TechSkills)
+                            {
+                                <li data-id="@techSkill.TechSkillID"><p>@techSkill.SkillDescription</p></li>
+                            }
+
+                        </ul>
+                    }
+
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- END RESUME -->
+}
+
+@if (Model.PersonalDescription != null)
+{
+    <!-- START ABOUT -->
+    <section id="about" class="tm-about">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-offset-1 col-md-11">
+                    <div class="title">
+                        <h2>This is <strong>who I am...</strong></h2>
+                        <h1 class="tm-red-text">@Model.PersonalDescription.Adjective1, @Model.PersonalDescription.Adjective2<strong> And @Model.PersonalDescription.Adjective3!</strong></h1>
+                    </div>
+                    @Html.Raw(Model.PersonalDescription.Blurb)
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- END ABOUT -->
+}
+
+@if (Model.ContactSiteLinks.Count > 0)
+{
+    <!-- START SOCIAL -->
+    <section id="social" class="tm-social">
+        <div class="container">
+            <div class="row">
+
+                @{
+                    var colClass = "";
+                    var linkCount = Model.ContactSiteLinks.Count;
+                    if (linkCount > 0)
+                    {
+                        var gridSpace = 12 / linkCount;
+                        colClass = "col-md-" + gridSpace.ToString();
+                    }
+                }
+
+                @foreach (var contactLink in Model.ContactSiteLinks.OrderBy(x => x.Order))
+                {
+                    <div class="col-md-4 col-sm-4 wow rotateInUpLeft" data-wow-delay="0.3s">
+                        <div class="media @contactLink.DisplayIcon.Replace("fa fa-","")">
+                            <a href="@contactLink.URL">
+                                <div class="media-object pull-left">
+                                    <i class="@contactLink.DisplayIcon"></i>
+                                </div>
+                                <div class="media-body">
+                                    <h4 class="media-heading tm-social-title">@contactLink.Directive</h4>
+                                    <h3>@contactLink.DisplayName</h3>
+                                </div>
+                            </a>
                         </div>
                     </div>
-
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-<!-- END PORTFOLIO -->
-
-<!-- START RESUME -->
-<section id="resume" class="tm-padding-top-bottom-100">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6 col-sm-6">
-                <h2 class="title">My <strong>Profile</strong></h2>
-                <p><span class="tm-info-label">Name...</span>@Model.ProfileDetails.FirstName @Model.ProfileDetails.LastName</p>
-                <p><span class="tm-info-label">Birthday...</span>@Model.ProfileDetails.DateOfBirth</p>
-                <p><span class="tm-info-label">Address...</span>@Model.ProfileDetails.Address</p>
-                <p><span class="tm-info-label">Phone...</span>@Model.ProfileDetails.PhoneNumber</p>
-                <p><span class="tm-info-label">Email...</span>@Model.ProfileDetails.Email</p>
-                <p><span class="tm-info-label">Website...</span> <a href="@Model.ProfileDetails.WebsiteURL" class="tm-red-text smoothScroll">@Model.ProfileDetails.WebsiteText</a></p>
-                <br />
-
-                <h2 class="title">Language <strong>Skills</strong></h2>
-
-                @foreach (var languageSkill in Model.LanguageSkills)
-                {
-                    <h4 class="tm-progress-label">
-                    @if(languageSkill.LanguageName != null)
-                    {
-                        @languageSkill.LanguageName <text>(@languageSkill.LanguageSpecifics)</text>
-                    }
-                    else
-                    {
-                        @languageSkill.LanguageSpecifics
-                    }
-                    <small class="progress-percent-small">@languageSkill.LanguageCapabilityPercentage%</small></h4>
-                    <div class="progress tm-progress">
-                        <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="@languageSkill.LanguageCapabilityPercentage" aria-valuemin="0" aria-valuemax="100" style="width: @languageSkill.LanguageCapabilityPercentage%;"></div>
-                    </div>
                 }
 
             </div>
+        </div>
+    </section>
+    <!-- END SOCIAL -->
+}
 
-            <div class="col-md-6 col-sm-6">
-                <h2 class="title"><strong>Tech</strong> Skills</h2>
-
-                <ul>
-
-                    @foreach(var techSkill in Model.TechSkills)
-                    {
-                        <li data-id="@techSkill.TechSkillID"><p>@techSkill.SkillDescription</p></li>
-                    }
-
-                </ul>
-
+@if(
+    Model.ContactSiteLinks.Count == 0
+    && Model.HighlightedWorkSkills.Count == 0
+    && Model.LanguageSkills.Count == 0
+    && Model.PersonalDescription == null
+    && Model.PortfolioProjects.Count == 0
+    && Model.ProfileDetails == null
+    && Model.SplashScreenDetails == null
+    && Model.TechSkills.Count == 0
+    )
+{
+    <section class="templatemo-home">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-2 col-sm-1"></div>
+                <div class="col-md-8 col-sm-10">
+                    @Html.Partial("../Shared/Error", new HandleErrorInfo(new Exception(), "Portfolio", "Index"))
+                </div>
+                <div class="col-md-2 col-sm-1"></div>
             </div>
         </div>
-    </div>
-</section>
-<!-- END RESUME -->
-
-<!-- START ABOUT -->
-<section id="about" class="tm-about">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-offset-1 col-md-11">
-                <div class="title">
-                    <h2>This is <strong>who I am...</strong></h2>
-                    <h1 class="tm-red-text">@Model.PersonalDescription.Adjective1, @Model.PersonalDescription.Adjective2<strong> And @Model.PersonalDescription.Adjective3!</strong></h1>
-                </div>
-                @Html.Raw(Model.PersonalDescription.Blurb)
-            </div>
-        </div>
-    </div>
-</section>
-<!-- END ABOUT -->
-
-<!-- START SOCIAL -->
-<section id="social" class="tm-social">
-    <div class="container">
-        <div class="row">
-
-            @{ 
-                var colClass = "";
-                var linkCount = Model.ContactSiteLinks.Count;
-                if(linkCount > 0)
-                {
-                    var gridSpace = 12 / linkCount;
-                    colClass = "col-md-" + gridSpace.ToString();
-                }
-            }
-
-            @foreach (var contactLink in Model.ContactSiteLinks.OrderBy(x => x.Order))
-            {
-                <div class="col-md-4 col-sm-4 wow rotateInUpLeft" data-wow-delay="0.3s">
-                    <div class="media @contactLink.DisplayIcon.Replace("fa fa-","")">
-                        <a href="@contactLink.URL">
-                            <div class="media-object pull-left">
-                                <i class="@contactLink.DisplayIcon"></i>
-                            </div>
-                            <div class="media-body">
-                                <h4 class="media-heading tm-social-title">@contactLink.Directive</h4>
-                                <h3>@contactLink.DisplayName</h3>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-            }
-
-        </div>
-    </div>
-</section>
-<!-- END SOCIAL -->
+    </section>
+}
