started a CRUD UI for managing Media Dashboard links

--- a/devinmajordotcom/Content/cover.css
+++ b/devinmajordotcom/Content/cover.css
@@ -2,6 +2,55 @@
  * Globals
  */
 
+.fa {
+    min-width: 14px;
+}
+
+.form-inline .form-control,
+.form-inline .btn {
+    margin-bottom: 8px;
+}
+
+.form-group {
+    width: 100%;
+}
+
+input[type=checkbox].css-checkbox {
+    position:absolute; z-index:-1000; left:-1000px; overflow: hidden; clip: rect(0 0 0 0); height:1px; width:1px; margin:-1px; padding:0; border:0;
+}
+
+input[type=checkbox].css-checkbox + label.css-label {
+    padding-left:55px;
+    height:30px; 
+    display:inline-block;
+    line-height:30px;
+    background-repeat:no-repeat;
+    background-position: 0 0;
+    font-size:14px;
+    vertical-align:middle;
+    cursor:pointer;
+}
+
+input[type=checkbox].css-checkbox:checked + label.css-label {
+    background-position: 0 -30px;
+}
+label.css-label {
+    background-image:url(img/check.png);
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+.mediaDashboardLink {
+    border: 1px solid white;
+    background-color: darkcyan;
+    padding: 5px;
+    border-radius: 5px;
+}
+
 ::-webkit-scrollbar {
     display: none;
 }
@@ -85,8 +134,6 @@ a:hover {
 .work-wrapper:hover { border-color: #71cef5; }
 .work-wrapper .fa {
   color: #888888;
-  font-size: 60px;
-  padding-bottom: 40px;
 }
 /* END WORK */
 
