--- a/devinmajordotcom/Views/MediaDashboard/_ManageMediaDashboard.cshtml
+++ b/devinmajordotcom/Views/MediaDashboard/_ManageMediaDashboard.cshtml
@@ -10,13 +10,58 @@
     {
         @Html.HiddenFor(x => x.SidebarLinks[count].ID)
         <div class="row">
-            <div class="col-md-6">
-                @Html.LabelFor(x => x.SidebarLinks[count].DisplayName)
-            </div>
-            <div class="col-md-6">
-                @Html.TextBoxFor(x => x.SidebarLinks[count].DisplayName, new { @class = "form-control" })
+            
+            <div class="col-md-12">
+                
+                <div id="tagsForm" class="sortable ui-sortable">
+
+                    <div class="form-group clearfix ui-sortable-handle mediaDashboardLink" style="padding-top: 10px; margin-bottom: 5px;">
+                        
+                        
+
+                        <span class="btn btn-primary move" type="button"><span class="fa fa-arrows"></span></span>
+                        
+                        <button style="float: right;" class="btn btn-danger deleteGroup" id="remScnt" type="button"><span class="fa fa-trash"></span></button>
+                        
+                        <br/><br/>
+
+                        <div style="margin-bottom: 8px" class="input-group">
+                            <div class="input-group-addon">Name</div>
+                            @Html.TextBoxFor(x => x.SidebarLinks[count].DisplayName, new { @class = "form-control", style = "margin-bottom: 0px", placeholder = "Display Name" })
+                        </div>
+
+                        <div style="margin-bottom: 8px" class="input-group">
+                            <div class="input-group-addon">URL</div>
+                            @Html.TextBoxFor(x => x.SidebarLinks[count].URL, new { @class = "form-control", style = "margin-bottom: 0px", placeholder = "http://www.google.ca/" })
+                        </div>
+
+                        <button data-placement="left"
+                                class="btn btn-default iconpicker"
+                                name="icon-1"
+                                role="iconpicker"
+                                data-iconset="fontawesome"
+                                data-icon="@Model.SidebarLinks[count].DisplayIcon"
+                                type="button">
+                            <i class="@Model.SidebarLinks[count].DisplayIcon"></i>
+                            @Html.HiddenFor(x => x.SidebarLinks[count].DisplayIcon, new { })
+                            <span class="caret"></span>
+                        </button>
+
+                        @Html.TextBoxFor(x => x.SidebarLinks[count].IsDefault, new { @checked = "", @type = "radio" })
+                        @Html.LabelFor(x => x.SidebarLinks[count].IsDefault, new { @class = "css-label" })
+                        
+                        @Html.TextBoxFor(x => x.SidebarLinks[count].IsEnabled, new { @checked = "", @type = "checkbox", @class = "css-checkbox" })
+                        @Html.LabelFor(x => x.SidebarLinks[count].IsEnabled, new { @class = "css-label" })
+
+                        @*<input type="checkbox" name="guest-1" id="guest-Plex" class="css-checkbox" checked="">
+                        <label for="guest-Plex" class="css-label">Guest</label> &nbsp;&nbsp;*@
+
+                    </div>
+
+                </div>
             </div>
         </div>
+        <br />
         <div class="row">
             <div class="col-md-12">
                 @Html.ValidationMessageFor(x => x.SidebarLinks[count].DisplayName)
@@ -28,7 +73,7 @@
 
     <div class="row">
         <div class="col-sm-offset-2 col-sm-8">
-            <input class="form-control" id="updateMediaDashboard" type="submit" value="Update Professional Portfolio">
+            <input class="form-control" id="updateMediaDashboard" type="submit" value="Update Media Dashboard">
         </div>
     </div>
 
