fixed something... lol

--- a/devinmajordotcom/Views/MediaDashboard/_ManageMediaDashboard.cshtml
+++ b/devinmajordotcom/Views/MediaDashboard/_ManageMediaDashboard.cshtml
@@ -17,11 +17,28 @@
 
                     <div class="form-group clearfix ui-sortable-handle mediaDashboardLink" style="padding-top: 10px; margin-bottom: 5px;">
                         
-                        
+                        <div class="row">
+                            <div class="col-md-4">
+                                <span class="btn btn-primary move" type="button"><span class="fa fa-arrows"></span></span>
+                            </div>
+                            <div class="col-md-4">
+                                <span class="@"></span>
+                            </div>
+                            <div class="col-md-4">
+                                <button style="float: right;" class="btn btn-danger deleteGroup" id="remScnt" type="button"><span class="fa fa-trash"></span></button>
+                            </div>
+                        </div>
 
-                        <span class="btn btn-primary move" type="button"><span class="fa fa-arrows"></span></span>
+                        <div class="row">
+                            
+                        </div>
+
+                        <div class="row">
+                            
+                        </div>
+
                         
-                        <button style="float: right;" class="btn btn-danger deleteGroup" id="remScnt" type="button"><span class="fa fa-trash"></span></button>
+                        
                         
                         <br/><br/>
 
