added icon picker plugin

--- a/devinmajordotcom/Views/MediaDashboard/_ManageMediaDashboard.cshtml
+++ b/devinmajordotcom/Views/MediaDashboard/_ManageMediaDashboard.cshtml
@@ -22,7 +22,7 @@
                                 <span class="btn btn-primary move" type="button"><span class="fa fa-arrows"></span></span>
                             </div>
                             <div class="col-md-4">
-                                <span class="@"></span>
+                                <span class=""></span>
                             </div>
                             <div class="col-md-4">
                                 <button style="float: right;" class="btn btn-danger deleteGroup" id="remScnt" type="button"><span class="fa fa-trash"></span></button>
